[gd_scene load_steps=2 format=3 uid="uid://c8k2m7n4p6rar"]

[ext_resource type="Script" uid="uid://0sbklu5hydfe" path="res://systems/scripts/TelephoneUI.gd" id="1"]

[node name="TelephoneUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 43.0
offset_top = 131.0
offset_right = -960.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.5
offset_top = -270.5
offset_right = 147.5
offset_bottom = 280.5
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_top = 2.0
offset_bottom = 33.0
grow_horizontal = 0
text = "âœ–"

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 56.0
offset_right = -32.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "ðŸ“ž TELEPHONE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="NumberDisplay" type="LineEdit" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
alignment = 1
editable = false

[node name="ButtonGrid" type="GridContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 3

[node name="CallButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "ðŸ“ž CALL"
